[project]
name = "mcp-dual-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.52.2",
    "docx>=0.2.4",
    "fastapi>=0.115.12",
    "mcp[cli]>=1.9.2",
    "ollama>=0.5.1",
    "openai>=1.83.0",
    "pydantic>=2.11.5",
    "pypdf2>=3.0.1",
    "python-docx>=1.1.2",
    "python-dotenv>=1.1.0",
    "scikit-learn>=1.6.1",
    "sentence-transformers>=4.1.0",
    "uvicorn>=0.34.3",
]
